<?xml version="1.0" encoding="utf-8"?>
<!-- The homepage for the admin-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/admin_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_homepage_rest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_vertical1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manage_events"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="Manage Events"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/Beige"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manage_profiles"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/manage_events"
            app:layout_constraintBottom_toTopOf="@id/manage_event_images"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Manage Profiles"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/Beige">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manage_event_images"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/manage_profiles"
            app:layout_constraintBottom_toTopOf="@id/manage_profile_images"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Manage Event Images"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/Beige">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manage_profile_images"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/manage_event_images"
            app:layout_constraintBottom_toTopOf="@id/Logout_button_admin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Manage Profile Images"
            android:textSize="22sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/Beige">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Logout_button_admin"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/manage_profile_images"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Logout"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/Beige">

        </com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>