<?xml version="1.0" encoding="utf-8"?>
<!-- Displays the Profiles to the admin-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/admin_profiles_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/rest_profiles_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

           <include layout="@layout/global_top_appbar" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/list_profiles_text"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="List of Profiles"
                android:textAlignment="center"
                android:textColor="@color/OffWhite"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/list_profiles_admin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

