<?xml version="1.0" encoding="utf-8"?>
<!--Displays to download poster activity-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DownloadPoster">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="531dp"
        android:text="@string/hello" />

    <Button
        android:id="@+id/load_image"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="579dp"
        android:text="Load Image" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="23dp"
        android:text="SAVE" />

    <TextView
        android:id="@+id/targeturi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="488dp" />

    <ImageView
        android:id="@+id/targetimage"
        android:layout_width="288dp"
        android:layout_height="356dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="136dp" />

</RelativeLayout>
