...
            layout="@layout/global_top_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_events_text"
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="List of Events"
            android:textColor="@color/OffWhite"
...
