<?xml version="1.0" encoding="utf-8"?>
<!--Display the profile settings-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/global_top_appbar" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="284dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_name_InputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload\nNew"
        app:backgroundTint="@color/Beige"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete\nAnd\nGenerate"
        app:backgroundTint="@color/Beige"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name_InputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Profile Name"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintBottom_toTopOf="@+id/homepage_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_name_editText"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/homepage_InputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Homepage"
        app:layout_constraintTop_toBottomOf="@id/profile_name_InputLayout"
        app:layout_constraintBottom_toTopOf="@+id/contact_info_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/homepage_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_info_InputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contact Info"
        app:layout_constraintTop_toBottomOf="@id/homepage_InputLayout"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact_info_editText"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_info_InputLayout">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/geolocation_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Geolocation    "
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"


        android:textSize="30sp"
        app:backgroundTint="@color/Beige"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
