<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/global_top_appbar" />

    <ImageView
        android:id="@+id/event_poster"
        android:layout_width="284dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toTopOf="@+id/event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        style="@style/TextAppearance.Material3.DisplaySmall"
        app:layout_constraintBottom_toTopOf="@+id/event_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_poster" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time"
        style="@style/TextAppearance.Material3.DisplaySmall"
        app:layout_constraintBottom_toTopOf="@+id/event_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_date" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        style="@style/TextAppearance.Material3.DisplaySmall"
        app:layout_constraintBottom_toTopOf="@+id/event_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_time" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/event_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Details"
        style="@style/TextAppearance.Material3.DisplaySmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_location" />

</androidx.constraintlayout.widget.ConstraintLayout>

