<?xml version="1.0" encoding="utf-8"?>
<!--Displays the homepage for the attendees-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_vertical1">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/attendee_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/REST_OF_PAGE"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/attendee_homepage_bar"
            layout="@layout/global_top_appbar"/>


        <ListView
            android:id="@+id/event_listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attendee_homepage_bar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/announcementsButton"
            style="@style/Widget.Material3.FloatingActionButton.Surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_circle_notifications_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BrowseEventsButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/DarkerSalmon"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/openCameraButton"
            style="@style/Widget.Material3.FloatingActionButton.Surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginBottom="10dp"
            android:text="Camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/EditProfile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BrowseEventsButton"
            app:backgroundTint="@color/DarkerSalmon"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/EditProfile"
            style="@style/Widget.Material3.FloatingActionButton.Surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_edit_24"
            android:text="Edit Profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/openCameraButton"
            app:backgroundTint="@color/DarkerSalmon"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/BrowseEventsButton"
            style="@style/Widget.Material3.FloatingActionButton.Surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@android:drawable/ic_menu_agenda"
            android:text="Browse Events"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/openCameraButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/announcementsButton"
            app:backgroundTint="@color/DarkerSalmon"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>